<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cream"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:src="@drawable/grupo2"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/our_menu"
        android:layout_marginTop="20dp"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="12dp">

        <Button

            android:id="@+id/button_antojitos"
            android:text="@string/antojitos"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/menu_buttons_margin"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:backgroundTint="@color/rojo"
            android:layout_columnSpan="1"
            android:textColor="@color/black"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/button_espacialidades"
            android:text="@string/espacialidades"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:backgroundTint="@color/rojo"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:textColor="@color/black"
            android:textSize="@dimen/menu_buttons_text" />
        <Button
            android:id="@+id/button_combinaciones"
            android:text="@string/combination"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/menu_buttons_margin"
            android:backgroundTint="@color/rojo"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:textColor="@color/black"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/button_sopas"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:backgroundTint="@color/rojo"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/sopas"
            android:textColor="@color/black"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/button_tortas"
            android:text="@string/tortas"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/menu_buttons_margin"
            android:backgroundTint="@color/rojo"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:textColor="@color/black"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/button_bebidas"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:backgroundTint="@color/rojo"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/drinks"
            android:textColor="@color/black"
            android:textSize="@dimen/menu_buttons_text" />

    </GridLayout>

</LinearLayout>